# nvv4l2decoder-res-change-bug

./: CMakeLists.txt  README.txt  main.c
